==> oio9595/Global_Technologies_FW/CQ24/reliable/FW/CQ24_Reliable/User/Src/cqic.c <==
#define __CQIC_C__
#include "main.h"
#include <stdio.h>
#include <stdint.h>
#include "cqic.h"
#define _Y__  TRUE
#define CQ24_DAISY_NUM 21

static void spi_write(uint16_t* pData, uint16_t length)
{
    for (uint8_t i = 0 ; i < length ; ++i)
    {
        LL_SPI_TransmitData16(SPI1, *(pData + i));
        while(!LL_SPI_IsActiveFlag_TXE(SPI1));
    }
    while(LL_SPI_IsActiveFlag_BSY(SPI1));
}

static void spi_read(uint16_t* pTxData, uint16_t* pRxData, uint16_t length)
{
    volatile uint16_t dummy = 0;
    dummy = LL_SPI_ReceiveData16(SPI1);

    LL_SPI_TransmitData16(SPI1, *(pTxData));
    while(!LL_SPI_IsActiveFlag_TXE(SPI1));

    for (uint8_t i = 0 ; i < length ; ++i)
    {
        LL_SPI_TransmitData16(SPI1, 0);
        while(!LL_SPI_IsActiveFlag_TXE(SPI1));

        while(!LL_SPI_IsActiveFlag_RXNE(SPI1));
        *(pRxData + i) = LL_SPI_ReceiveData16(SPI1);
    }
    while(LL_SPI_IsActiveFlag_BSY(SPI1));
}

static void cqic_write(uint16_t* pData, uint16_t length)
{
    //snprintf(msg_buffer, sizeof(msg_buffer), "pData[0] = 0x%X\r\n", *pData);
    //print(msg_buffer);

    uint8_t spi_write_flag = 0;

    if ((*pData & 0xC000) == (CMD_01 << 14))
    {
        //snprintf(msg_buffer, sizeof(msg_buffer), "CMD1!!\r\n");
        //print(msg_buffer);
        for (uint8_t i = 0 ; i < CQ24_DAISY_NUM ; ++i)
        {
            gn_spi_cq_daisied_buffer[i] = *(pData + 0);
        }
    }
    else if ((*pData & 0xC000) == (CMD_02 << 14))
    {
        //snprintf(msg_buffer, sizeof(msg_buffer), "CMD2!!\r\n");
        //print(msg_buffer);
        for (uint8_t i = 0 ; i < CQ24_DAISY_NUM ; ++i)
        {
            gn_spi_cq_daisied_buffer[i * 2 + 0] = *(pData + 0);
            gn_spi_cq_daisied_buffer[i * 2 + 1] = *(pData + 1);
        }
    }
    else
    {
        snprintf(msg_buffer, sizeof(msg_buffer), "UNKNOWN CMD!!\r\n");
        print(msg_buffer);
        spi_write_flag = 1;
    }

    if (spi_write_flag == 0)
    {
        CQ24_CS_LO();
        spi_write(gn_spi_cq_daisied_buffer, length * CQ24_DAISY_NUM);
        CQ24_CS_HI();
        HAL_Delay(1);
    }
}

static void cqic_read(uint16_t* cmd, uint16_t* pData, uint16_t length)
{
    uint16_t rx_buffer[5] = {0, };

    CQ24_CS_LO();
    spi_read(cmd, rx_buffer, length);
    CQ24_CS_HI();

    for (uint8_t i = 0 ; i < 5 ; ++i)
    {
        snprintf(msg_buffer, sizeof(msg_buffer), "rxbuff[%u] : [0x%4X]\r\n", i, rx_buffer[i]);
        print(msg_buffer);
    }

    if(length == 1)
    {
        pData[1] = rx_buffer[0];
    }
    else
    {
        pData[1] = rx_buffer[1];
    }
}

void cqic_init(void)
{
    cqic_cmd1_type cmd1;
    cmd1.value = 0;

/*
    cmd1.u.cmd_id   = CMD_01;
    cmd1.u.rw       = SPI_WR;
    cmd1.u.addr     = SOFT_RESET;
    cq24_cmd1_set_reg.cmd1_r00.u.rst1 = 1;
    cmd1.u.data     = cq24_cmd1_set_reg.cmd1_r00.value;
    cqic_write(&cmd1.value, 1);

    cmd1.u.cmd_id   = CMD_01;
    cmd1.u.rw       = SPI_WR;
    cmd1.u.addr     = SOFT_RESET;
    cq24_cmd1_set_reg.cmd1_r00.u.rst1 = 0;
    cmd1.u.data     = cq24_cmd1_set_reg.cmd1_r00.value;
    cqic_write(&cmd1.value, 1);
*/

    cmd1.u.cmd_id   = CMD_01;
    cmd1.u.rw       = SPI_WR;
    cmd1.u.addr     = FIX_CONTROL;
    cq24_cmd1_set_reg.cmd1_r02.u.ld_force = 1;
    cq24_cmd1_set_reg.cmd1_r02.u.ld_i_fix = 1;
    cq24_cmd1_set_reg.cmd1_r02.u.duty_fix = 1;
    cq24_cmd1_set_reg.cmd1_r02.u.header_fix = 1;
    cmd1.u.data     = cq24_cmd1_set_reg.cmd1_r02.value;
    cqic_write(&cmd1.value, 1);

    cqic_set_duty_full();
    cqic_output_enable();
    cqic_set_vref(0xFFF);
    cqic_set_cz(CZ_1V5);

    gf_cq24_ado_voltage = 1.3f;
}
