==> oio9595/Global_Technologies_FW/CQIC_JIG/jig/CQ24_ES2/FW/User/Src/cqic.c <==
#define __CQIC_C__
#include "main.h"
#include <stdio.h>
#include "common.h"
#include "cqic.h"
#include "cqic_test.h"
#include "log.h"
#include "ads124s08.h"
#define _Y__  TRUE

void cqic_init(void)
{
	cqic_cmd1_type cmd1 = {0, };
	
	set_cqic_5_0V_on();
	set_cqic_power_on();
	HAL_Delay(30);

	cmd1.u.cmd_id = CMD_01;
	cmd1.u.rw = SPI_WR;
	cmd1.u.addr = 0x00;
	cmd1.u.data = 0x001;	
	cqic_write(CQIC_1, &cmd1.value, 1);
	HAL_Delay(10);

	cmd1.u.cmd_id = CMD_01;
	cmd1.u.rw = SPI_WR;
	cmd1.u.addr = 0x00;
	cmd1.u.data = 0x000;
	cqic_write(CQIC_1, &cmd1.value, 1);
	HAL_Delay(3);
	
	cqic_output_enable(4095, 4095);

	cqic_otp_read();
	cqic_reg_read_all();
}

void spi_write(uint16_t* pData, uint16_t length)
{
    HAL_SPI_Transmit(&hspi2, (uint8_t*)pData, length, 100);
}

void spi_read(uint16_t* pTxData, uint16_t* pRxData, uint16_t length)
{
    HAL_SPI_TransmitReceive(&hspi2, (uint8_t*)pTxData, (uint8_t*)pRxData, length, 100);
}

void cqic_write(uint8_t device_id, uint16_t* pData, uint16_t length)
{
    cqic_cs_enable(device_id);
    spi_write(pData, length);
    cqic_cs_disable(device_id);
    
    //snprintf(msg_buffer, sizeof msg_buffer, "[WRITE]cqic_write %u [ 0x%X, 0x%X ] \r\n", length, pData[0], pData[1]);
    //print(msg_buffer);
}

void cqic_read(uint8_t device_id, uint16_t* cmd, uint16_t* pData, uint16_t length)
{
	uint16_t rx_buffer[5] = {0, };
    
    cqic_cs_enable(device_id);
    spi_read(cmd, rx_buffer, length);
    cqic_cs_disable(device_id);

    //snprintf(msg_buffer, sizeof msg_buffer, "[READ]nmic_read %u [ 0x%X, 0x%X ][ 0x%X, 0x%X ] \r\n", length, pData[0], pData[1], rx_buffer[0], rx_buffer[1]);
    //print(LOG_DEBUG, msg_buffer);

    if(length == 1)
    {
        pData[1] = rx_buffer[0];
    }
    else    
    {
        pData[1] = rx_buffer[1];
    }
}
